--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "axios": "^1.6.5",
     "express": "^4.18.2",
     "jest": "^29.7.0",
+    "pg": "^8.11.3",
+    "pgp": "^0.1.0",
     "psql": "^0.0.1"
   },
   "scripts": {
@@ -15,6 +17,7 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.8",
+    "@types/pg-promise": "^5.4.3",
     "babel-jest": "^29.7.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
