--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
+  "name": "cccat11_refactoring",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
   "dependencies": {
-    "axios": "^1.6.5",
+    "@hapi/hapi": "^21.3.2",
+    "@types/amqplib": "^0.10.1",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.0",
+    "@types/sinon": "^10.0.14",
+    "amqp": "^0.2.7",
+    "amqplib": "^0.10.3",
+    "axios": "^1.3.5",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "jest": "^29.7.0",
-    "pg": "^8.11.3",
-    "pgp": "^0.1.0",
-    "psql": "^0.0.1"
-  },
-  "scripts": {
-    "start": "nodemon src/main.ts",
-    "test": "jest --env node"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.23.7",
-    "@babel/preset-env": "^7.23.8",
-    "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.11",
-    "@types/node": "^20.10.8",
-    "@types/pg-promise": "^5.4.3",
-    "babel-jest": "^29.7.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "jest": "^29.5.0",
+    "nodemon": "^2.0.22",
+    "pg-promise": "^11.4.3",
+    "sinon": "^15.0.4",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
   }
 }
